--- a/style.css
+++ b/style.css
@@ -91,3 +91,43 @@ nav{
     font-weight: 400;
     color: #848484;
 }
+
+/*LOADING*/
+/*LOADING*/
+/*LOADING*/
+
+#myDiv{
+    opacity: 0;
+    display: none;
+    transition: 500ms;
+}
+#loader-wrapper{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 1;
+    transition: 500ms;
+}
+.loader {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    position: relative;
+    animation: loader 2s infinite ease;
+}
+
+@keyframes loader {
+    0% { transform: rotate(0deg);}
+    25% { transform: rotate(180deg);}
+    50% { transform: rotate(180deg);}
+    75% { transform: rotate(360deg);}
+    100% { transform: rotate(360deg);}
+}
+#logo{
+    width: 100%;
+}
