--- a/style.css
+++ b/style.css
@@ -14,16 +14,21 @@ body{
 #blok1{
     width: 100%;
     height: 100%;
-    position: fixed;
-    background-color: white;
 }
 #blok2{
     width: 100%;
     height: 100%;
     background-color: #DA0037;
     position: absolute;
-    margin-top: 60%;
+    margin-top: 20%;
     color: white;
+}
+.liamIllustration{
+    position: absolute;
+    width: 29%;
+    left: 55%;
+    top: 30%;
+    z-index: -1;
 }
 #uvod{
     width: 100%;
@@ -82,12 +87,6 @@ nav{
 #hamburgerLink{
     display: none;
 }
-.liamIllustration{
-    position: absolute;
-    width: 29%;
-    left: 55%;
-    top: 30%;
-}
 .rightSideText{
     margin-top: 10%;
 }
@@ -137,6 +136,14 @@ nav{
     width: 50%;
     margin: 0 auto;
 }
+@media (max-width: 1400px){
+    #blok2{
+        margin-top: 15%;
+    }
+    .liamIllustration{
+        top: 35%;
+    }
+}
 @media (max-width: 950px) {
     #discoverButton{
         display: none;
@@ -151,18 +158,12 @@ nav{
     }
 
     #blok2{
-        width: 100%;
-        height: 100%;
-        background-color: #DA0037;
-        position: absolute;
-        margin-top: 135%;
-        color: white;
+        margin-top: 40%;
     }
     .liamIllustration{
-        position: absolute;
-        width: 45%;
-        left: 45%;
-        top: 50%;
+        top: 28%;
+        width: 50%;
+        left: 40%;
     }
     #anim{
         width: 75%;
@@ -176,6 +177,22 @@ nav{
         align-items: center;
         opacity: 1;
         transition: 500ms;
+    }
+}
+@media (max-width: 850px){
+    #blok2{
+        margin-top: 55%;
+    }
+    .liamIllustration{
+        top: 35%;
+    }
+}
+@media (max-width: 775px){
+    #blok2{
+        margin-top: 60%;
+    }
+    .liamIllustration{
+        top: 45%;
     }
 }
 
@@ -209,18 +226,11 @@ nav{
     }
 
     #blok2{
-        width: 100%;
-        height: 100%;
-        background-color: #DA0037;
-        position: absolute;
-        margin-top: 135%;
-        color: white;
+        margin-top: 75%;
     }
     .liamIllustration{
-        position: absolute;
-        width: 45%;
-        margin-left: -15%;
-        top: 65%;
+        top: 70%;
+        left: 25%
     }
     #anim{
         width: 90%;
@@ -281,17 +291,11 @@ nav{
     }
 
     #blok2{
-        width: 100%;
-        height: 100%;
-        background-color: #DA0037;
-        position: absolute;
-        margin-top: 160%;
-        color: white;
+        margin-top: 75%;
     }
     .liamIllustration{
-        position: absolute;
-        width: 50%;
-        top: 55%;
+        top: 47%;
+        left: 25%
     }
     .pageName{
         font-size: 2em;
@@ -332,18 +336,11 @@ nav{
     }
 
     #blok2{
-        width: 100%;
-        height: 100%;
-        background-color: #DA0037;
-        position: absolute;
-        margin-top: 225%;
-        color: white;
+        margin-top: 75%;
     }
     .liamIllustration{
-        position: absolute;
-        width: 65%;
-        margin-left: -25%;
-        top: 58%;
+        top: 50%;
+        left: 25%
     }
     .pageName{
         font-size: 2em;
@@ -384,17 +381,11 @@ nav{
     }
 
     #blok2{
-        width: 100%;
-        height: 100%;
-        background-color: #DA0037;
-        position: absolute;
-        margin-top: 250%;
-        color: white;
+        margin-top: 75%;
     }
     .liamIllustration{
-        position: absolute;
-        width: 65%;
-        top: 58%;
+        top: 53%;
+        left: 25%
     }
     .pageName{
         font-size: 2em;
@@ -405,5 +396,14 @@ nav{
         font-size: 1em;
         font-weight: 400;
         color: #848484;
+    }
+}
+@media (max-width: 380px){
+    #blok2{
+        margin-top: 75%;
+    }
+    .liamIllustration{
+        top: 65%;
+        left: 25%
     }
 }
