--- a/style.css
+++ b/style.css
@@ -61,6 +61,8 @@ nav{
     margin-left: 30px;
     font-size: 24px;
     font-weight: 500;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 #navRight{
     width: 50%;
