--- a/style.css
+++ b/style.css
@@ -41,20 +41,6 @@ body{
     -ms-user-select: none;
     transition: 500ms;
 }
-#uvod{
-    width: 100%;
-    height: 50%;
-    color: white;
-}
-#popis{
-    width: 100%;
-    height: 50%;
-    color: black;
-    background: white;
-}
-.obsah{
-    margin: 50px;
-}
 nav{
     display: inline-flex;
     width: 100%;
@@ -155,6 +141,35 @@ nav{
 #anim{
     width: 50%;
     margin: 0 auto;
+}
+
+/*OBSAH*/
+/*OBSAH*/
+/*OBSAH*/
+
+#uvod{
+    width: 100%;
+    height: 100%;
+    color: white;
+}
+
+#popis{
+    width: 100%;
+    height: 100%;
+    color: black;
+    background: white;
+}
+
+.obsah{
+    margin: 50px;
+}
+
+.funkceObsah{
+    width: 100%;
+    height:100%;
+    display: block;
+    margin: auto;
+
 }
 @media (max-width: 1400px){
     #blok2{
