--- a/Stylesheets/guide.css
+++ b/Stylesheets/guide.css
@@ -182,7 +182,7 @@ nav{
         width: 50%;
         left: 40%;
     }
-    #anim{
+    #animG{
         width: 75%;
     }
 
@@ -237,7 +237,7 @@ nav{
         top: 70%;
         left: 25%
     }
-    #anim{
+    #animG{
         width: 90%;
     }
     #mainContent{
@@ -281,7 +281,7 @@ nav{
         width: 25%;
     }
 
-    #anim{
+    #animG{
         width: 100%;
     }
     .liamIllustration{
