--- a/Stylesheets/guide.css
+++ b/Stylesheets/guide.css
@@ -20,7 +20,6 @@ body{
 }
 #blok2{
     width: 100%;
-    height: 100%;
     position: absolute;
 }
 nav{
@@ -48,9 +47,9 @@ nav{
     position: relative;
     float: right;
 }
-.linkNav{
+.linkNavG{
     text-decoration: none;
-    color: grey;
+    color: #848484;
     font-size: 20px;
     margin-right: 50px;
     list-style-type: none;
@@ -60,8 +59,14 @@ nav{
     float: right;
     margin-top: auto;
     margin-bottom: auto;
-
+    transition: 200ms;
 }
+.linkNavG:hover{
+    transition: 200ms;
+    color: #212121;
+}
+
+
 #discoverButton{
     display: block;
 }
@@ -136,7 +141,6 @@ nav{
 
 #popis{
     width: 100%;
-    height: 100%;
     color: black;
     background: white;
 }
@@ -155,11 +159,19 @@ nav{
     margin-right: auto;
 }
 .guideObsah{
-    padding: 50px;
+    padding: 0 50px 0 50px;
 }
 .funkceObsah{
-    padding: 50px;
+    padding: 0 50px 0 50px;
     color: black;
+    display: block;
+}
+#filtrNazev{
+    font-size: 1.5em;
+}
+.filters{
+    width: 100%;
+    display: flex;
 }
 
 @media (max-width: 1400px){
@@ -174,7 +186,7 @@ nav{
         justify-content: center;
         margin-top: 100%;
     }
-    .linkNav{
+    .linkNavG{
         display:none;
     }
     .liamIllustration{
@@ -189,6 +201,14 @@ nav{
 
     .places{
         grid-template-columns: repeat(2, 1fr);
+    }
+    .guideObsah{
+        padding: 0 35px 0 35px;
+    }
+    .funkceObsah{
+        padding: 0 35px 0 35px;
+        color: black;
+        display: block;
     }
 }
 @media (max-width: 850px){
@@ -214,7 +234,7 @@ nav{
         justify-content: center;
         margin-top: 100%;
     }
-    .linkNav{
+    .linkNavG{
         display:none;
     }
     nav{
@@ -263,7 +283,7 @@ nav{
         justify-content: center;
         margin-top: 100%;
     }
-    .linkNav{
+    .linkNavG{
         display:none;
     }
     nav{
@@ -308,7 +328,7 @@ nav{
         justify-content: center;
         margin-top: 100%;
     }
-    .linkNav{
+    .linkNavG{
         display:none;
     }
     nav{
@@ -340,7 +360,6 @@ nav{
         color: #848484;
     }
     #popis{
-        margin-top: 40%;
         display: block;
     }
 }
@@ -353,7 +372,7 @@ nav{
         justify-content: center;
         margin-top: 100%;
     }
-    .linkNav{
+    .linkNavG{
         display:none;
     }
     nav{
@@ -389,7 +408,6 @@ nav{
     }
 
     #popis{
-        margin-top: 40%;
         display: block;
     }
 }
