--- a/Stylesheets/contact.css
+++ b/Stylesheets/contact.css
@@ -220,6 +220,9 @@ nav{
     -webkit-user-select: none;
     -ms-user-select: none;
 }
+.textContact{
+    margin-top: 15%;
+}
 
 
 @media (max-width: 1400px){
